2_Parser/y.output
Terminals which are not used

   ERROR


Grammar

    0 $accept: program $end

    1 program: dec_list

    2 dec_list: dec_list dec
    3         | dec

    4 dec: var_dec
    5    | func_dec

    6 id: ID

    7 var_dec: type_spec id SEMI

    8 @1: /* empty */

    9 @2: /* empty */

   10 var_dec: type_spec id @1 LBRACE NUM @2 RBRACE SEMI

   11 type_spec: INT
   12          | VOID

   13 @3: /* empty */

   14 func_dec: type_spec id @3 LPAREN params RPAREN comp_stmt

   15 params: param_list
   16       | VOID

   17 param_list: param_list COMMA param
   18           | param

   19 param: type_spec id
   20      | type_spec id LBRACE RBRACE

   21 comp_stmt: LCURLY local_dec stmt_list RCURLY

   22 local_dec: local_dec var_dec
   23          | /* empty */

   24 stmt_list: stmt_list stmt
   25          | /* empty */

   26 stmt: exp_stmt
   27     | comp_stmt
   28     | select_stmt
   29     | iter_stmt
   30     | return_stmt

   31 exp_stmt: exp SEMI
   32         | SEMI

   33 select_stmt: IF LPAREN exp RPAREN stmt
   34            | IF LPAREN exp RPAREN stmt ELSE stmt

   35 iter_stmt: WHILE LPAREN exp RPAREN stmt

   36 return_stmt: RETURN SEMI
   37            | RETURN exp SEMI

   38 exp: var ASSIGN exp
   39    | simple_exp

   40 var: id

   41 @4: /* empty */

   42 var: id @4 LBRACE exp RBRACE

   43 simple_exp: add_exp relop add_exp
   44           | add_exp

   45 relop: LE
   46      | LT
   47      | GT
   48      | GE
   49      | EQ
   50      | NE

   51 add_exp: add_exp addop term
   52        | term

   53 addop: PLUS
   54      | MINUS

   55 term: term mulop factor
   56     | factor

   57 mulop: TIMES
   58      | OVER

   59 factor: LPAREN exp RPAREN
   60       | var
   61       | call
   62       | NUM

   63 @5: /* empty */

   64 call: id @5 LPAREN args RPAREN

   65 args: arg_list
   66     | /* empty */

   67 arg_list: arg_list COMMA exp
   68         | exp


Terminals, with rules where they appear

$end (0) 0
error (256)
NOELSE (258)
IF (259) 33 34
ELSE (260) 34
WHILE (261) 35
RETURN (262) 36 37
INT (263) 11
VOID (264) 12 16
ID (265) 6
NUM (266) 10 62
EQ (267) 49
NE (268) 50
LT (269) 46
LE (270) 45
GT (271) 47
GE (272) 48
PLUS (273) 53
MINUS (274) 54
TIMES (275) 57
OVER (276) 58
SEMI (277) 7 10 31 32 36 37
COMMA (278) 17 67
LPAREN (279) 14 33 34 35 59 64
RPAREN (280) 14 33 34 35 59 64
LCURLY (281) 21
RCURLY (282) 21
LBRACE (283) 10 20 42
RBRACE (284) 10 20 42
ASSIGN (285) 38
ERROR (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
program (33)
    on left: 1, on right: 0
dec_list (34)
    on left: 2 3, on right: 1 2
dec (35)
    on left: 4 5, on right: 2 3
id (36)
    on left: 6, on right: 7 10 14 19 20 40 42 64
var_dec (37)
    on left: 7 10, on right: 4 22
@1 (38)
    on left: 8, on right: 10
@2 (39)
    on left: 9, on right: 10
type_spec (40)
    on left: 11 12, on right: 7 10 14 19 20
func_dec (41)
    on left: 14, on right: 5
@3 (42)
    on left: 13, on right: 14
params (43)
    on left: 15 16, on right: 14
param_list (44)
    on left: 17 18, on right: 15 17
param (45)
    on left: 19 20, on right: 17 18
comp_stmt (46)
    on left: 21, on right: 14 27
local_dec (47)
    on left: 22 23, on right: 21 22
stmt_list (48)
    on left: 24 25, on right: 21 24
stmt (49)
    on left: 26 27 28 29 30, on right: 24 33 34 35
exp_stmt (50)
    on left: 31 32, on right: 26
select_stmt (51)
    on left: 33 34, on right: 28
iter_stmt (52)
    on left: 35, on right: 29
return_stmt (53)
    on left: 36 37, on right: 30
exp (54)
    on left: 38 39, on right: 31 33 34 35 37 38 42 59 67 68
var (55)
    on left: 40 42, on right: 38 60
@4 (56)
    on left: 41, on right: 42
simple_exp (57)
    on left: 43 44, on right: 39
relop (58)
    on left: 45 46 47 48 49 50, on right: 43
add_exp (59)
    on left: 51 52, on right: 43 44 51
addop (60)
    on left: 53 54, on right: 51
term (61)
    on left: 55 56, on right: 51 52 55
mulop (62)
    on left: 57 58, on right: 55
factor (63)
    on left: 59 60 61 62, on right: 55 56
call (64)
    on left: 64, on right: 61
@5 (65)
    on left: 63, on right: 64
args (66)
    on left: 65 66, on right: 64
arg_list (67)
    on left: 67 68, on right: 65 67


state 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program    go to state 3
    dec_list   go to state 4
    dec        go to state 5
    var_dec    go to state 6
    type_spec  go to state 7
    func_dec   go to state 8


state 1

   11 type_spec: INT .

    $default  reduce using rule 11 (type_spec)


state 2

   12 type_spec: VOID .

    $default  reduce using rule 12 (type_spec)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 9


state 4

    1 program: dec_list .
    2 dec_list: dec_list . dec

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    dec        go to state 10
    var_dec    go to state 6
    type_spec  go to state 7
    func_dec   go to state 8


state 5

    3 dec_list: dec .

    $default  reduce using rule 3 (dec_list)


state 6

    4 dec: var_dec .

    $default  reduce using rule 4 (dec)


state 7

    7 var_dec: type_spec . id SEMI
   10        | type_spec . id @1 LBRACE NUM @2 RBRACE SEMI
   14 func_dec: type_spec . id @3 LPAREN params RPAREN comp_stmt

    ID  shift, and go to state 11

    id  go to state 12


state 8

    5 dec: func_dec .

    $default  reduce using rule 5 (dec)


state 9

    0 $accept: program $end .

    $default  accept


state 10

    2 dec_list: dec_list dec .

    $default  reduce using rule 2 (dec_list)


state 11

    6 id: ID .

    $default  reduce using rule 6 (id)


state 12

    7 var_dec: type_spec id . SEMI
   10        | type_spec id . @1 LBRACE NUM @2 RBRACE SEMI
   14 func_dec: type_spec id . @3 LPAREN params RPAREN comp_stmt

    SEMI  shift, and go to state 13

    LPAREN    reduce using rule 13 (@3)
    $default  reduce using rule 8 (@1)

    @1  go to state 14
    @3  go to state 15


state 13

    7 var_dec: type_spec id SEMI .

    $default  reduce using rule 7 (var_dec)


state 14

   10 var_dec: type_spec id @1 . LBRACE NUM @2 RBRACE SEMI

    LBRACE  shift, and go to state 16


state 15

   14 func_dec: type_spec id @3 . LPAREN params RPAREN comp_stmt

    LPAREN  shift, and go to state 17


state 16

   10 var_dec: type_spec id @1 LBRACE . NUM @2 RBRACE SEMI

    NUM  shift, and go to state 18


state 17

   14 func_dec: type_spec id @3 LPAREN . params RPAREN comp_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 19

    type_spec   go to state 20
    params      go to state 21
    param_list  go to state 22
    param       go to state 23


state 18

   10 var_dec: type_spec id @1 LBRACE NUM . @2 RBRACE SEMI

    $default  reduce using rule 9 (@2)

    @2  go to state 24


state 19

   12 type_spec: VOID .
   16 params: VOID .

    RPAREN    reduce using rule 16 (params)
    $default  reduce using rule 12 (type_spec)


state 20

   19 param: type_spec . id
   20      | type_spec . id LBRACE RBRACE

    ID  shift, and go to state 11

    id  go to state 25


state 21

   14 func_dec: type_spec id @3 LPAREN params . RPAREN comp_stmt

    RPAREN  shift, and go to state 26


state 22

   15 params: param_list .
   17 param_list: param_list . COMMA param

    COMMA  shift, and go to state 27

    $default  reduce using rule 15 (params)


state 23

   18 param_list: param .

    $default  reduce using rule 18 (param_list)


state 24

   10 var_dec: type_spec id @1 LBRACE NUM @2 . RBRACE SEMI

    RBRACE  shift, and go to state 28


state 25

   19 param: type_spec id .
   20      | type_spec id . LBRACE RBRACE

    LBRACE  shift, and go to state 29

    $default  reduce using rule 19 (param)


state 26

   14 func_dec: type_spec id @3 LPAREN params RPAREN . comp_stmt

    LCURLY  shift, and go to state 30

    comp_stmt  go to state 31


state 27

   17 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_spec  go to state 20
    param      go to state 32


state 28

   10 var_dec: type_spec id @1 LBRACE NUM @2 RBRACE . SEMI

    SEMI  shift, and go to state 33


state 29

   20 param: type_spec id LBRACE . RBRACE

    RBRACE  shift, and go to state 34


state 30

   21 comp_stmt: LCURLY . local_dec stmt_list RCURLY

    $default  reduce using rule 23 (local_dec)

    local_dec  go to state 35


state 31

   14 func_dec: type_spec id @3 LPAREN params RPAREN comp_stmt .

    $default  reduce using rule 14 (func_dec)


state 32

   17 param_list: param_list COMMA param .

    $default  reduce using rule 17 (param_list)


state 33

   10 var_dec: type_spec id @1 LBRACE NUM @2 RBRACE SEMI .

    $default  reduce using rule 10 (var_dec)


state 34

   20 param: type_spec id LBRACE RBRACE .

    $default  reduce using rule 20 (param)


state 35

   21 comp_stmt: LCURLY local_dec . stmt_list RCURLY
   22 local_dec: local_dec . var_dec

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 25 (stmt_list)

    var_dec    go to state 36
    type_spec  go to state 37
    stmt_list  go to state 38


state 36

   22 local_dec: local_dec var_dec .

    $default  reduce using rule 22 (local_dec)


state 37

    7 var_dec: type_spec . id SEMI
   10        | type_spec . id @1 LBRACE NUM @2 RBRACE SEMI

    ID  shift, and go to state 11

    id  go to state 39


state 38

   21 comp_stmt: LCURLY local_dec stmt_list . RCURLY
   24 stmt_list: stmt_list . stmt

    IF      shift, and go to state 40
    WHILE   shift, and go to state 41
    RETURN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    SEMI    shift, and go to state 44
    LPAREN  shift, and go to state 45
    LCURLY  shift, and go to state 30
    RCURLY  shift, and go to state 46

    id           go to state 47
    comp_stmt    go to state 48
    stmt         go to state 49
    exp_stmt     go to state 50
    select_stmt  go to state 51
    iter_stmt    go to state 52
    return_stmt  go to state 53
    exp          go to state 54
    var          go to state 55
    simple_exp   go to state 56
    add_exp      go to state 57
    term         go to state 58
    factor       go to state 59
    call         go to state 60


state 39

    7 var_dec: type_spec id . SEMI
   10        | type_spec id . @1 LBRACE NUM @2 RBRACE SEMI

    SEMI  shift, and go to state 13

    $default  reduce using rule 8 (@1)

    @1  go to state 14


state 40

   33 select_stmt: IF . LPAREN exp RPAREN stmt
   34            | IF . LPAREN exp RPAREN stmt ELSE stmt

    LPAREN  shift, and go to state 61


state 41

   35 iter_stmt: WHILE . LPAREN exp RPAREN stmt

    LPAREN  shift, and go to state 62


state 42

   36 return_stmt: RETURN . SEMI
   37            | RETURN . exp SEMI

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    SEMI    shift, and go to state 63
    LPAREN  shift, and go to state 45

    id          go to state 47
    exp         go to state 64
    var         go to state 55
    simple_exp  go to state 56
    add_exp     go to state 57
    term        go to state 58
    factor      go to state 59
    call        go to state 60


state 43

   62 factor: NUM .

    $default  reduce using rule 62 (factor)


state 44

   32 exp_stmt: SEMI .

    $default  reduce using rule 32 (exp_stmt)


state 45

   59 factor: LPAREN . exp RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 45

    id          go to state 47
    exp         go to state 65
    var         go to state 55
    simple_exp  go to state 56
    add_exp     go to state 57
    term        go to state 58
    factor      go to state 59
    call        go to state 60


state 46

   21 comp_stmt: LCURLY local_dec stmt_list RCURLY .

    $default  reduce using rule 21 (comp_stmt)


state 47

   40 var: id .
   42    | id . @4 LBRACE exp RBRACE
   64 call: id . @5 LPAREN args RPAREN

    LPAREN    reduce using rule 63 (@5)
    LBRACE    reduce using rule 41 (@4)
    $default  reduce using rule 40 (var)

    @4  go to state 66
    @5  go to state 67


state 48

   27 stmt: comp_stmt .

    $default  reduce using rule 27 (stmt)


state 49

   24 stmt_list: stmt_list stmt .

    $default  reduce using rule 24 (stmt_list)


state 50

   26 stmt: exp_stmt .

    $default  reduce using rule 26 (stmt)


state 51

   28 stmt: select_stmt .

    $default  reduce using rule 28 (stmt)


state 52

   29 stmt: iter_stmt .

    $default  reduce using rule 29 (stmt)


state 53

   30 stmt: return_stmt .

    $default  reduce using rule 30 (stmt)


state 54

   31 exp_stmt: exp . SEMI

    SEMI  shift, and go to state 68


state 55

   38 exp: var . ASSIGN exp
   60 factor: var .

    ASSIGN  shift, and go to state 69

    $default  reduce using rule 60 (factor)


state 56

   39 exp: simple_exp .

    $default  reduce using rule 39 (exp)


state 57

   43 simple_exp: add_exp . relop add_exp
   44           | add_exp .
   51 add_exp: add_exp . addop term

    EQ     shift, and go to state 70
    NE     shift, and go to state 71
    LT     shift, and go to state 72
    LE     shift, and go to state 73
    GT     shift, and go to state 74
    GE     shift, and go to state 75
    PLUS   shift, and go to state 76
    MINUS  shift, and go to state 77

    $default  reduce using rule 44 (simple_exp)

    relop  go to state 78
    addop  go to state 79


state 58

   52 add_exp: term .
   55 term: term . mulop factor

    TIMES  shift, and go to state 80
    OVER   shift, and go to state 81

    $default  reduce using rule 52 (add_exp)

    mulop  go to state 82


state 59

   56 term: factor .

    $default  reduce using rule 56 (term)


state 60

   61 factor: call .

    $default  reduce using rule 61 (factor)


state 61

   33 select_stmt: IF LPAREN . exp RPAREN stmt
   34            | IF LPAREN . exp RPAREN stmt ELSE stmt

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 45

    id          go to state 47
    exp         go to state 83
    var         go to state 55
    simple_exp  go to state 56
    add_exp     go to state 57
    term        go to state 58
    factor      go to state 59
    call        go to state 60


state 62

   35 iter_stmt: WHILE LPAREN . exp RPAREN stmt

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 45

    id          go to state 47
    exp         go to state 84
    var         go to state 55
    simple_exp  go to state 56
    add_exp     go to state 57
    term        go to state 58
    factor      go to state 59
    call        go to state 60


state 63

   36 return_stmt: RETURN SEMI .

    $default  reduce using rule 36 (return_stmt)


state 64

   37 return_stmt: RETURN exp . SEMI

    SEMI  shift, and go to state 85


state 65

   59 factor: LPAREN exp . RPAREN

    RPAREN  shift, and go to state 86


state 66

   42 var: id @4 . LBRACE exp RBRACE

    LBRACE  shift, and go to state 87


state 67

   64 call: id @5 . LPAREN args RPAREN

    LPAREN  shift, and go to state 88


state 68

   31 exp_stmt: exp SEMI .

    $default  reduce using rule 31 (exp_stmt)


state 69

   38 exp: var ASSIGN . exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 45

    id          go to state 47
    exp         go to state 89
    var         go to state 55
    simple_exp  go to state 56
    add_exp     go to state 57
    term        go to state 58
    factor      go to state 59
    call        go to state 60


state 70

   49 relop: EQ .

    $default  reduce using rule 49 (relop)


state 71

   50 relop: NE .

    $default  reduce using rule 50 (relop)


state 72

   46 relop: LT .

    $default  reduce using rule 46 (relop)


state 73

   45 relop: LE .

    $default  reduce using rule 45 (relop)


state 74

   47 relop: GT .

    $default  reduce using rule 47 (relop)


state 75

   48 relop: GE .

    $default  reduce using rule 48 (relop)


state 76

   53 addop: PLUS .

    $default  reduce using rule 53 (addop)


state 77

   54 addop: MINUS .

    $default  reduce using rule 54 (addop)


state 78

   43 simple_exp: add_exp relop . add_exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 45

    id       go to state 47
    var      go to state 90
    add_exp  go to state 91
    term     go to state 58
    factor   go to state 59
    call     go to state 60


state 79

   51 add_exp: add_exp addop . term

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 45

    id      go to state 47
    var     go to state 90
    term    go to state 92
    factor  go to state 59
    call    go to state 60


state 80

   57 mulop: TIMES .

    $default  reduce using rule 57 (mulop)


state 81

   58 mulop: OVER .

    $default  reduce using rule 58 (mulop)


state 82

   55 term: term mulop . factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 45

    id      go to state 47
    var     go to state 90
    factor  go to state 93
    call    go to state 60


state 83

   33 select_stmt: IF LPAREN exp . RPAREN stmt
   34            | IF LPAREN exp . RPAREN stmt ELSE stmt

    RPAREN  shift, and go to state 94


state 84

   35 iter_stmt: WHILE LPAREN exp . RPAREN stmt

    RPAREN  shift, and go to state 95


state 85

   37 return_stmt: RETURN exp SEMI .

    $default  reduce using rule 37 (return_stmt)


state 86

   59 factor: LPAREN exp RPAREN .

    $default  reduce using rule 59 (factor)


state 87

   42 var: id @4 LBRACE . exp RBRACE

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 45

    id          go to state 47
    exp         go to state 96
    var         go to state 55
    simple_exp  go to state 56
    add_exp     go to state 57
    term        go to state 58
    factor      go to state 59
    call        go to state 60


state 88

   64 call: id @5 LPAREN . args RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 45

    $default  reduce using rule 66 (args)

    id          go to state 47
    exp         go to state 97
    var         go to state 55
    simple_exp  go to state 56
    add_exp     go to state 57
    term        go to state 58
    factor      go to state 59
    call        go to state 60
    args        go to state 98
    arg_list    go to state 99


state 89

   38 exp: var ASSIGN exp .

    $default  reduce using rule 38 (exp)


state 90

   60 factor: var .

    $default  reduce using rule 60 (factor)


state 91

   43 simple_exp: add_exp relop add_exp .
   51 add_exp: add_exp . addop term

    PLUS   shift, and go to state 76
    MINUS  shift, and go to state 77

    $default  reduce using rule 43 (simple_exp)

    addop  go to state 79


state 92

   51 add_exp: add_exp addop term .
   55 term: term . mulop factor

    TIMES  shift, and go to state 80
    OVER   shift, and go to state 81

    $default  reduce using rule 51 (add_exp)

    mulop  go to state 82


state 93

   55 term: term mulop factor .

    $default  reduce using rule 55 (term)


state 94

   33 select_stmt: IF LPAREN exp RPAREN . stmt
   34            | IF LPAREN exp RPAREN . stmt ELSE stmt

    IF      shift, and go to state 40
    WHILE   shift, and go to state 41
    RETURN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    SEMI    shift, and go to state 44
    LPAREN  shift, and go to state 45
    LCURLY  shift, and go to state 30

    id           go to state 47
    comp_stmt    go to state 48
    stmt         go to state 100
    exp_stmt     go to state 50
    select_stmt  go to state 51
    iter_stmt    go to state 52
    return_stmt  go to state 53
    exp          go to state 54
    var          go to state 55
    simple_exp   go to state 56
    add_exp      go to state 57
    term         go to state 58
    factor       go to state 59
    call         go to state 60


state 95

   35 iter_stmt: WHILE LPAREN exp RPAREN . stmt

    IF      shift, and go to state 40
    WHILE   shift, and go to state 41
    RETURN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    SEMI    shift, and go to state 44
    LPAREN  shift, and go to state 45
    LCURLY  shift, and go to state 30

    id           go to state 47
    comp_stmt    go to state 48
    stmt         go to state 101
    exp_stmt     go to state 50
    select_stmt  go to state 51
    iter_stmt    go to state 52
    return_stmt  go to state 53
    exp          go to state 54
    var          go to state 55
    simple_exp   go to state 56
    add_exp      go to state 57
    term         go to state 58
    factor       go to state 59
    call         go to state 60


state 96

   42 var: id @4 LBRACE exp . RBRACE

    RBRACE  shift, and go to state 102


state 97

   68 arg_list: exp .

    $default  reduce using rule 68 (arg_list)


state 98

   64 call: id @5 LPAREN args . RPAREN

    RPAREN  shift, and go to state 103


state 99

   65 args: arg_list .
   67 arg_list: arg_list . COMMA exp

    COMMA  shift, and go to state 104

    $default  reduce using rule 65 (args)


state 100

   33 select_stmt: IF LPAREN exp RPAREN stmt .
   34            | IF LPAREN exp RPAREN stmt . ELSE stmt

    ELSE  shift, and go to state 105

    $default  reduce using rule 33 (select_stmt)


state 101

   35 iter_stmt: WHILE LPAREN exp RPAREN stmt .

    $default  reduce using rule 35 (iter_stmt)


state 102

   42 var: id @4 LBRACE exp RBRACE .

    $default  reduce using rule 42 (var)


state 103

   64 call: id @5 LPAREN args RPAREN .

    $default  reduce using rule 64 (call)


state 104

   67 arg_list: arg_list COMMA . exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 45

    id          go to state 47
    exp         go to state 106
    var         go to state 55
    simple_exp  go to state 56
    add_exp     go to state 57
    term        go to state 58
    factor      go to state 59
    call        go to state 60


state 105

   34 select_stmt: IF LPAREN exp RPAREN stmt ELSE . stmt

    IF      shift, and go to state 40
    WHILE   shift, and go to state 41
    RETURN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    SEMI    shift, and go to state 44
    LPAREN  shift, and go to state 45
    LCURLY  shift, and go to state 30

    id           go to state 47
    comp_stmt    go to state 48
    stmt         go to state 107
    exp_stmt     go to state 50
    select_stmt  go to state 51
    iter_stmt    go to state 52
    return_stmt  go to state 53
    exp          go to state 54
    var          go to state 55
    simple_exp   go to state 56
    add_exp      go to state 57
    term         go to state 58
    factor       go to state 59
    call         go to state 60


state 106

   67 arg_list: arg_list COMMA exp .

    $default  reduce using rule 67 (arg_list)


state 107

   34 select_stmt: IF LPAREN exp RPAREN stmt ELSE stmt .

    $default  reduce using rule 34 (select_stmt)
